v0.4.0. Add new EventMachine transport.  This requires two layers of transport
configurability: 
  options[:transport] for EventMachine or Socket transports
  options[:transport_wrapper] for optional Buffered or Framed Transport.
Clients will need to update their options to ensure they don't conflict with this change. (mperham)

v0.3.3. Allow for a timeout over all requests in a call.

v0.3.2. Fix connection close bug (nkallen, mattknox).

v0.3.1. Add ability to reset connection after N requests.

v0.3. Change default timeout semantics; hash default was too sneaky. Fix bug.

v0.2.2. Fix connect bug.

v0.2.1. Don't turn off strict_read by default; allow override.

v0.2. Add ThriftClient::Simple (Robey).

v0.1.3. Define methods explicitly.

v0.1.2. Support default responses.

v0.1.1. Support server_retry_period.

v0.1. First release.