@@ -3,6 +3,7 @@ configurability:
   options[:transport] for EventMachine or Socket transports
   options[:transport_wrapper] for optional Buffered or Framed Transport.
 Clients will need to update their options to ensure they don't conflict with this change. (mperham)
+Revert global timeouts.
 
 v0.3.3. Allow for a timeout over all requests in a call.
 
